@@ -1,38 +1,69 @@
-# pkdgrav test_pkd.param 
-# Compiled: Dec  1 2000 15:48:46
-# Preprocessor macros:
-# Master host: adonis.astro.washington.edu
-# N: 36000 nThreads: 1 bDiag: 0 Verbosity flags: (1,1,1,1,0)
-# bPeriodic: 0 bRestart: 0 bComove: 0
-# bParaRead: 1 bParaWrite: 1 bCannonical: 1 bStandard: 1
-# bKDK: 1 nBucket: 8 iOutInterval: 10 iLogInterval: 10
-# iCheckInterval: 10 iOrder: 4 iEwOrder: 4 nReplicas: 0
-# dEwCut: 2.600000 dEwhCut: 2.800000
-# iStartStep: 0 nSteps: 100 nSmooth: 64 dExtraStore: 0.100000 dSoft: input
-# bPhysicalSoft: 0 bVariableSoft: 0 nSoftNbr: 32 bSoftByType: 1 bSoftMaxMul: 1 dSoftMax: 0 bDoSoftOutput: 0
-# dDelta: 0.01 dEta: 0.1 dEtaCourant: 0.4 iMaxRung: 1
-# bGravStep: 0 bEpsAccStep: 1 bSqrtPhiStep: 0 bDensityStep: 0 nTruncateRung: 0 bNonSymp: 1
-# bDoGravity: 1 bFandG: 0 bHeliocentric: 0 dCentMass: 1
-# bRotFrame: 0 dOmega: 0 dOmegaDot: 0
-# dFracNoDomainDecomp: 0.002 dFracNoDomainDimChoice: 0.1 bFastGas: 0 dFracFastGas: 0.2 dhMinOverSoft: 0 bRungDD: 0 dRungDDWeight: 1 
-# nTruncateRung: 0 bLowerSoundSpeed: 0 bShockTracker: 0 dShockTrackerA: 0.000000 dShockTrackerB: 0.000000
-# bPatch: 0 dOrbFreq: 0
-# iOpenType: JOSH dTheta: 0.700000
-# dAbsPartial: 0 dRealPartial: 0 dAbsTotal: 0 dRelTotal: 0
-# dPeriod: 1 dxPeriod: 1 dyPeriod: 1 dzPeriod: 1
-# dHubble0: 0 dOmega0: 1 dLambda: 0 dOmegaRad: 0 dOmegab: 0
+# Starting ChaNGa
+# Parameters:
+# dDelta: 0.01
+# iMaxRung: 1
+# nSteps: 100
+# iStartStep: 0
+# iWallRunTime: 1
+# killAt: 0
+# bEpsAccStep: 1
+# bGravStep: 0
+# dEta: 0.03
+# bCannonical: 1
+# bKDK: 1
+# iOutInterval: 10
+# iLogInterval: 1
+# iCheckInterval: 2
+# bDoDensity: 1
+# bDoGravity: 1
+# dSoft: 0
+# dTheta: 0.7
+# dTheta2: 0.7
+# iOrder: 2
+# bPeriodic: 0
+# nReplicas: 0
+# dPeriod: 1e+38
+# bEwald: 0
+# dEwCut: 2.6
+# dEwhCut: 2.8
+# bComove: 0
+# dHubble0: 0
+# dOmega0: 1
+# dLambda: 0
+# dOmegaRad: 0
+# dOmegab: 0
+# dQuintess: 0
+# dRedTo: 0
+# dMsolUnit: 1
+# dKpcUnit: 1000
+# bPrintBinary: 1
+# bStandard: 1
+# bOverwrite: 1
+# bParaRead: 1
+# bParaWrite: 0
 # achInFile: king_soft.bin
-# achOutName: dakde0p03
-# achDataSubPath: .
-# TimeOut: none
-0.000000e+00 0.000000e+00 -3.2191951413982792e+01 3.265580e+01 -6.484776e+01 0.000000e+00 7.4052117441385990e-01 2.3431465561079690e-01 -2.7772686585215336e-02 12 2.380000e+00 9.600000e+00 0.000000e+00 1.000000e+00
-1.000000e-01 0.000000e+00 -3.2192096382153338e+01 3.266099e+01 -6.485308e+01 0.000000e+00 7.4054600866649889e-01 2.3431579032528310e-01 -2.7764446910617989e-02 13 2.460000e+00 9.510000e+00 0.000000e+00 1.000000e+00
-2.000000e-01 0.000000e+00 -3.2192064903143013e+01 3.264936e+01 -6.484143e+01 0.000000e+00 7.4059132998858124e-01 2.3431951758299929e-01 -2.7769328034051372e-02 13 2.630000e+00 9.280000e+00 0.000000e+00 1.000000e+00
-3.000000e-01 0.000000e+00 -3.2192063544720305e+01 3.262412e+01 -6.481618e+01 0.000000e+00 7.4060284499887052e-01 2.3430844788926458e-01 -2.7774116966517135e-02 14 2.360000e+00 9.510000e+00 0.000000e+00 1.000000e+00
-4.000000e-01 0.000000e+00 -3.2192001474386196e+01 3.258717e+01 -6.477917e+01 0.000000e+00 7.4061555388329992e-01 2.3430344831692193e-01 -2.7777360870604017e-02 13 2.740000e+00 9.120000e+00 0.000000e+00 1.000000e+00
-5.000000e-01 0.000000e+00 -3.2191981662084267e+01 3.254174e+01 -6.473373e+01 0.000000e+00 7.4062690655090591e-01 2.3429593192272383e-01 -2.7760397444626758e-02 13 2.290000e+00 9.520000e+00 0.000000e+00 1.000000e+00
-6.000000e-01 0.000000e+00 -3.2192077959629259e+01 3.249250e+01 -6.468458e+01 0.000000e+00 7.4064100318334347e-01 2.3427905976969202e-01 -2.7739619531015777e-02 13 2.400000e+00 9.370000e+00 0.000000e+00 1.000000e+00
-7.000000e-01 0.000000e+00 -3.2192070679522899e+01 3.244364e+01 -6.463571e+01 0.000000e+00 7.4066025161693472e-01 2.3426733157917318e-01 -2.7722447248031339e-02 13 2.580000e+00 9.280000e+00 0.000000e+00 1.000000e+00
-8.000000e-01 0.000000e+00 -3.2192078495753755e+01 3.239633e+01 -6.458841e+01 0.000000e+00 7.4066866449786939e-01 2.3424635487738948e-01 -2.7714913457179299e-02 13 2.160000e+00 9.670000e+00 0.000000e+00 1.000000e+00
-9.000000e-01 0.000000e+00 -3.2192091088031148e+01 3.234914e+01 -6.454123e+01 0.000000e+00 7.4067739722738701e-01 2.3423632581763520e-01 -2.7708744438386022e-02 13 2.570000e+00 9.280000e+00 0.000000e+00 1.000000e+00
-1.000000e+00 0.000000e+00 -3.2192132693020298e+01 3.230328e+01 -6.449541e+01 0.000000e+00 7.4070859737025863e-01 2.3422729710599699e-01 -2.7686575253056643e-02 13 2.250000e+00 9.580000e+00 0.000000e+00 1.000000e+00
+# achOutName: pkdtest
+# dExtraStore: 0
+# dDumpFrameStep: -1
+# dDumpFrameTime: -1
+# iDirector: 1
+# bStaticTest: 0
+# bRandChunks: 1
+# bNoCache: 0
+# iVerbosity: 0
+# nTreePieces: 16
+# nBucket: 12
+# nChunks: 1
+# nYield: 5
+# nCacheDepth: 4
+# bPrefetch: 1
+# nCacheSize: 157749520
+# nDomainDecompose: 0
+# lbcommCutoffMsgs: 1
+# time redshift TotalEVir TotalE Kinetic Virial Potential TotalECosmo Lx Ly Lz Wallclock
+0.01 0 -32.0173 -32.1904 32.6571 -64.6743 -64.8475 0 0.740528 0.234313 -0.0277689 14.411
+0.02 0 -32.0176 -32.1904 32.6582 -64.6758 -64.8486 0 0.740537 0.234311 -0.0277662 14.7739
+# ReStarting ChaNGa
+# time redshift TotalEVir TotalE Kinetic Virial Potential TotalECosmo Lx Ly Lz Wallclock
+0.03 0 -32.0172 -32.1904 32.6591 -64.6763 -64.8495 0 0.740552 0.234307 -0.0277617 14.4555
+0.04 0 -32.0164 -32.1903 32.6598 -64.6762 -64.8501 0 0.740566 0.234301 -0.0277558 14.4078
